--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -4,8 +4,10 @@ on: [workflow_dispatch]
 jobs:
   generate-rust-sdk:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
-
       - id: checkout
         name: Checkout repo
         uses: actions/checkout@v3
