--- a/.github/workflows/publish-crate.yml
+++ b/.github/workflows/publish-crate.yml
@@ -21,5 +21,6 @@ jobs:
              - uses: katyo/publish-crates@v2
                with:
                     path: './rust-client'
+                    ignore-unpublished-changes: true
                     dry-run: true
                     registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
