disable crates update (autogenerated by openapi)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -20,9 +20,7 @@
             "matchManagers": [
                 "cargo"
             ],
-            "matchUpdateTypes": [
-                "minor"
-            ]
+            "enabled": true
         },
         {
             "groupName": "GitHub Actions",
