update rust toolchain

--- a/.github/workflows/publish-crate.yml
+++ b/.github/workflows/publish-crate.yml
@@ -14,10 +14,7 @@ jobs:
             contents: read
         steps:
              - uses: actions/checkout@v4
-             - uses: actions-rs/toolchain@v1
-               with:
-                   toolchain: stable
-                   override: true
+             - uses: dtolnay/rust-toolchain@stable
              - uses: katyo/publish-crates@v2
                with:
                     path: './rust-client'
