--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -23,7 +23,7 @@ jobs:
 
           - id: download-openapi-spec
             name: Download a file
-            run: wget https://github.com/fattureincloud/openapi-fattureincloud/raw/master/openapi-enriched.yaml -0 fattureincloud-openapi.yaml
+            run: wget https://github.com/fattureincloud/openapi-fattureincloud/raw/master/openapi-enriched.yaml -O fattureincloud-openapi.yaml
 
           - id: read-new-openapi-version
             name: Read New OpenAPI Version
