--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -17,7 +17,7 @@ jobs:
 
       - id: download-openapi-spec
         name: Download a file
-        run: wget https://github.com/fattureincloud/openapi-fattureincloud/raw/master/openapi-enriched.yaml -0 fattureincloud-openapi.yaml
+        run: wget https://github.com/fattureincloud/openapi-fattureincloud/raw/master/openapi-enriched.yaml -O fattureincloud-openapi.yaml
 
       - id: generate-client
         name: Generate Rust Client
