--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -30,7 +30,7 @@ jobs:
       - id: set-authors
         name: Set Cargo Authors
         run: |
-          yq -i 'package.authors[0] = "Alessandro Ferrara"' ./rust-client/Cargo.toml
+          yq -i '.package.authors[0] = "Alessandro Ferrara"' ./rust-client/Cargo.toml
 
       - id: read-openapi-version
         name: Read OpenAPI Version
