add package repository

--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -27,6 +27,11 @@ jobs:
           openapi-file: fattureincloud-openapi.yaml
           config-file: openapi-config.json
 
+      - id: set-repository
+        name: Set Cargo Authors
+        run: |
+          yq -i '.package.repository = "https://github.com/teapot-labs/fattureincloud-rs/"' ./rust-client/Cargo.toml
+
       - id: read-openapi-version
         name: Read OpenAPI Version
         run: |
