--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,7 @@
         ":enablePreCommit",
         ":semanticCommits"
     ],
+    "enabled": false,
     "assignees": [
         "ferrohd"
     ],
