--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -9,7 +9,7 @@ jobs:
     check-update:
         runs-on: ubuntu-latest
         permissions:
-            contents: read
+            contents: write
         steps:
           - id: checkout
             name: Checkout repo
